--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
               </div>
               <div class="vr"></div>
               <div class="col-sm">
-                Acá escribe B
+                Gabo
               </div>
             </div>
           </div>
