--- a/index.html
+++ b/index.html
@@ -97,17 +97,13 @@
       <div class="card">
             <div class="card-body">
             <h5 class="card-header">Punto 3</h5>
-<<<<<<< HEAD
-            <p><i>Lo que más espero de 5to año es aprobar proyecto</i></p>
-=======
             <p><i>Lo que mas espero de 5to es pasar 5to</i></p>
->>>>>>> ff879a67b50240361a866f8cb00ce550158b942a
             </div>
       </div>
       <div class="card">
         <div class="card-body">
         <h5 class="card-header">Punto 4</h5>
-        <p>Reemplazar por una imagen</p>
+        <img src="matafuegos.jpeg">
         </div>
   </div>
     </div>
